# Checksums

./: .gitignore  CMakeLists.txt  backup.c  checksum_notes.txt  decode-checksum  decode-checksum.c  decode-crc32  decode-crc32.c  decode-parity  decode-parity.c  decodeCRC32.c  decodeChecksum  decodeChecksum.c  decodeParity  decodeParity.c  encode-checksum  encode-checksum.c  encode-crc32  encode-crc32.c  encode-parity  encode-parity.c  encodeCRC32.c  encodeChecksum  encodeChecksum.c  encodeParity  encodeParity.c  foo.txt  input.txt  ioutil.c  ioutil.h  out.txt  readme.txt  test.py  test_cases
.gitignore/: .gitignore
source/: decode-crc32.c  encode-crc32.c
